
ElasticSearch-Carrot2 Change Log

================ master ====================

================ ElasticSearch-Carrot2 2.2.1 ====================

Other changes

* GH-40: Upgrade to C2 3.12.0 and L3G 1.13.0.

* GH-38: Array of fields cannot be used. (Christophe Quintard via Dawid Weiss).

================ ElasticSearch-Carrot2 2.2.0 ====================

Other changes

* GH-37: Added workarounds for tighter security checks in ES 2.2.0.
  The plugin from now on requires custom relaxed policy which has
  to be manually approved during startup.

================ ElasticSearch-Carrot2 2.1.2 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.1.1 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.1.0 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.0.2 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.0.1 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.0.0 ====================

Other changes

* GH-29: Upgrade to ES 2.0.0 (official).

================ ElasticSearch-Carrot2 2.0.0-rc1 ================

Changes in Backwards Compatibility

* GH-23: Plugin code restructured for ES 2.0.0. Versioning
  scheme will now follow ElasticSearch strictly since starting
  from version 2.0.0 plugins must declare an (exact) version
  of ES they were compiled against.
  
* GH-25: Plugin configuration files have been moved to reside
  inside the plugin. They should be automatically installed
  (copied) to ElasticSearch's config/ folder, where they can
  be tweaked.

Other changes

* GH-28: Add support for es/config and plugin/config relative 
  license locations in Lingo3G

* GH-27: Add dependency on morfologik-stemming.

* GH-24: Update JS visualizations in plugin documentation.
